Porting Checkpoint - no. 1
Still a long way to go.

Registry stuff, resourceloc and gradle migration, initial capability migration